# HaruQuantCBot

./: .editorconfig  .gitignore  AGENTS.md  BUILDING.md  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  REFACTORING_SUMMARY.md  TASK_3.6_SUMMARY.md  TASK_3.7_SUMMARY.md  TASK_3.8_SUMMARY.md  TASK_3.9_SUMMARY.md  alembic.ini  build_and_test.bat  configure_and_build.bat  coverage.json  pyproject.toml  quick_build.bat  requirements.txt  vcpkg.json
.claude/: settings.local.json
.context/agents/: architect-specialist.md  backend-specialist.md  bug-fixer.md  code-reviewer.md  database-specialist.md  devops-specialist.md  documentation-writer.md  feature-developer.md  frontend-specialist.md  mobile-specialist.md  performance-optimizer.md  refactoring-specialist.md  security-auditor.md  test-writer.md
.context/docs/: README.md  architecture.md  codebase-map.json  data-flow.md  development-workflow.md  glossary.md  project-overview.md  security.md  testing-strategy.md  tooling.md
.context/docs/qa/: README.md  api-endpoints.md  database.md  deployment.md  error-handling.md  getting-started.md  project-structure.md
.context/skills/: README.md
.context/skills/api-design/: SKILL.md
.context/skills/bug-investigation/: SKILL.md
.context/skills/code-review/: SKILL.md
.context/skills/commit-message/: SKILL.md
.context/skills/documentation/: SKILL.md
.context/skills/feature-breakdown/: SKILL.md
.context/skills/pr-review/: SKILL.md
.context/skills/refactoring/: SKILL.md
.context/skills/security-audit/: SKILL.md
.context/skills/test-generation/: SKILL.md
.context/workflow/: actions.jsonl
.github/: BRANCH_PROTECTION.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 872282d8ce0b_initial_migration_phase_1_database_.py
bridge/: CMakeLists.txt  README.md
bridge/src/: bind_callbacks.cpp  bind_commands.cpp  bind_engine.cpp  bind_types.cpp  module.cpp
bridge/tests/: test_bridge_import.py
config/: base.toml  development.toml  production.toml  testing.toml
cpp/: CMakeLists.txt
cpp/benchmarks/: CMakeLists.txt  bench_event_loop.cpp
cpp/include/hqt/core/: engine.hpp  event.hpp  event_loop.hpp  global_clock.hpp  write_ahead_log.hpp  zmq_broadcaster.hpp
cpp/include/hqt/costs/: commission_model.hpp  costs_engine.hpp  slippage_model.hpp  spread_model.hpp  swap_model.hpp
cpp/include/hqt/data/: bar.hpp  data_feed.hpp  mmap_reader.hpp  tick.hpp
cpp/include/hqt/market/: symbol_info.hpp
cpp/include/hqt/matching/: commission_model.hpp  matching_engine.hpp  slippage_model.hpp  spread_model.hpp  swap_model.hpp
cpp/include/hqt/trading/: account_info.hpp  deal_info.hpp  history_order_info.hpp  market_state.hpp  order_info.hpp  position_info.hpp  symbol_info.hpp  trade.hpp
cpp/include/hqt/util/: currency_converter.hpp  fixed_point.hpp  margin_calculator.hpp  random.hpp  timestamp.hpp
cpp/src/trading/: trade.cpp
cpp/tests/: CMakeLists.txt  test_costs_engine.cpp  test_currency_margin.cpp  test_data_structures.cpp  test_engine.cpp  test_event_loop.cpp  test_matching_engine.cpp  test_trade.cpp  test_utilities.cpp  test_zmq_wal.cpp
docs/: 01_software_requirements_specification.md  02_system_design_document.md  03_implementation_plan.md  bridge.md  configuration.md  cpp_build_and_test_guide.md  cpp_data_structures.md  data_providers.md  data_storage.md  data_validation.md  data_versioning.md  database.md  exceptions.md  logging.md  test_coverage_task_3_4.md  zmq_wal.md
migrations/: README.md
mql5/: README.md
scripts/: README.md  download_data.py  quick_test.bat  setup_and_test.ps1  setup_cpp_build.md  setup_dev.py  verify_vs_setup.ps1
src/hqt/data/: __init__.py
src/hqt/data/models/: __init__.py  bar.py  dtypes.py  symbol_spec.py  tick.py
src/hqt/data/providers/: __init__.py  base.py  dukascopy_provider.py  factory.py  mt5_provider.py
src/hqt/data/storage/: __init__.py  base.py  catalog.py  hdf5_store.py  manager.py  parquet_store.py
src/hqt/data/validation/: __init__.py  checks.py  cleaning.py  models.py  pipeline.py  report.py
src/hqt/data/versioning/: __init__.py  hasher.py  lineage.py  manifest.py
src/hqt/foundation/: __init__.py
src/hqt/foundation/config/: __init__.py  manager.py  models.py  schema.py  secrets.py
src/hqt/foundation/database/: __init__.py  backup.py  connection.py  models.py  repositories.py
src/hqt/foundation/exceptions/: __init__.py  base.py  broker.py  config.py  data.py  engine.py  trading.py
src/hqt/foundation/logging/: __init__.py  config.py  filters.py  formatters.py  handlers.py  redactor.py
src/hqt/foundation/utils/: __init__.py  calculation_utils.py  datetime_utils.py  helpers.py  validation_utils.py
strategies/: README.md
tests/: test_placeholder.py
tests/integration/: test_data_pipeline.py  test_engine_e2e.py  test_engine_performance.py  test_foundation_integration.py
tests/unit/: test_config.py  test_data_bar.py  test_data_dtypes.py  test_data_providers.py  test_data_storage.py  test_data_symbol_spec.py  test_data_tick.py  test_data_validation.py  test_data_versioning.py  test_database.py  test_exceptions.py  test_logging.py  test_utils.py
